--- a/src/phoenix-wallet/package.json
+++ b/src/phoenix-wallet/package.json
@@ -13,7 +13,8 @@
     "@solana/web3.js": "^1.98.2",
     "ethers": "^6.14.3",
     "react": ">=17.0.0",
-    "viem": "^2.30.6"
+    "viem": "^2.30.6",
+    "@mysten/sui": "^1.30.3"
   },
   "devDependencies": {
     "@types/node": "^20",
