binance wallet connector

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@binance/w3w-ethereum-provider": "^1.1.8-alpha.0",
     "@metamask/sdk": "^0.33.0",
     "@solflare-wallet/sdk": "^1.4.2",
     "next": "15.3.3",
