Enhance Solana wallet integration by adding support for Phantom wallet and Solana transactions. Updated package dependencies for Solana libraries, refactored wallet connection logic, and improved transaction handling for both legacy and versioned transactions. Removed PhantomSolConnector in favor of a more unified SolanaConnector approach.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@solana/wallet-adapter-phantom": "^0.9.27",
+    "@solana/web3.js": "^1.98.2",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
