--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@solana/wallet-adapter-phantom": "^0.9.27",
     "@solana/web3.js": "^1.98.2",
+    "ethers": "^6.14.3",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
