--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-phantom": "^0.9.27",
     "@solana/web3.js": "^1.98.2",
     "ethers": "^6.14.3",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.30.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
