Integrate eslint-plugin-unused-imports for improved linting and code quality. Update ESLint configuration to include rules for unused imports and variables. Modify Next.js configuration to disable ESLint during builds. Update package dependencies and enhance wallet integration by refactoring import statements for better organization and clarity.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@phoenix-wallet/wallet-adapter": ["./src/phoenix-wallet"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
