--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@solana/web3.js": "^1.98.2",
     "ethers": "^6.14.3",
     "next": "15.3.3",
-    "next": "15.3.3",
+    "@mysten/sui": "^1.30.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "viem": "^2.30.6"
