--- a/src/phoenix-wallet/package.json
+++ b/src/phoenix-wallet/package.json
@@ -18,12 +18,13 @@
   "dependencies": {
     "@binance/w3w-ethereum-provider": "^1.1.8-alpha.0",
     "@metamask/sdk": "^0.33.0",
-    "@solana/web3.js": "^1.98.2",
+    "@mysten/sui": "^1.30.3",
+    "@privy-io/react-auth": "^2.17.2",
     "@solana/wallet-adapter-base": "^0.9.26",
+    "@solana/web3.js": "^1.98.2",
     "ethers": "^6.14.3",
     "react": ">=17.0.0",
-    "viem": "^2.30.6",
-    "@mysten/sui": "^1.30.3"
+    "viem": "^2.30.6"
   },
   "devDependencies": {
     "@types/node": "^20",
